# rust-training

./: .gitignore  Cargo.toml
circular_queue/: README.md
code/basic/src/: lib.rs
code/basic/src/crust/: mod.rs
code/basic/src/live_code/: encoder.rs  user.rs
code/dsa/src/: algorithm.rs  ds.rs  lib.rs
code/dsa/src/algorithm/: bm.rs  kmp.rs  merge_sort.rs
code/dsa/src/ds/: circular_queue.rs  dsu.rs  edge.rs  graph.rs  graph_matrix.rs  (+3 more)
code/exec/src/: cell.rs  strtok.rs
code/kv/: Cargo.toml  README.md  abi.proto
code/kv/src/: proto.rs
code/lou-grep/src/: lib.rs
code/my-redis/: Cargo.toml
code/pow/: abi.proto  build.rs
code/pow/src/: engine.rs  service.rs
code/proc_macros/examples/: generate.rs
code/proc_macros/fixtures/: person.json  person2.json
code/proc_macros/src/: json_schema.rs
code/proc_macros/templates/: code.j2
code/r-graph/: Cargo.toml
code/xdiff/: Cargo.toml  README.md
code/xdiff/fixtures/: test.yaml
code/xdiff/src/: cli.rs  lib.rs  utils.rs
code/xdiff/src/profile/: diff.rs  mod.rs  req.rs  res.rs
code/xdiff_core/: Cargo.toml
code/xdiff_core/examples/: config.rs
code/xdiff_core/src/: config.rs  lib.rs
exec/: Cargo.toml
exec/fixtures/: user
exec/src/: lib.rs
live_coding/basic/: Cargo.toml
live_coding/basic/src/: lib.rs
live_coding/dsa/src/: algorithm.rs  ds.rs
live_coding/my-redis/src/: main.rs
live_coding/pow/: Cargo.toml  README.md
live_coding/pow/src/: engine.rs  lib.rs  service.rs
live_coding/pow/src/proto/: abi.rs
live_coding/xdiff_core/examples/: config.rs
live_coding/xdiff_core/src/: profile.rs
lou-grep/: Cargo.toml
lou-grep/src/: config.rs  main.rs
proc_macros/level1/: Cargo.toml
proc_macros/level1/examples/: generate.rs
proc_macros/level1/fixtures/: person1.json
proc_macros/level1/src/: lib.rs
proc_macros/level2/: Cargo.toml
proc_macros/level2/examples/: command.rs
proc_macros/level2/src/: builder.rs  lib.rs
r-graph/src/: graph.rs  main.rs
xdiff/examples/: config.rs  similar.rs
xdiff/src/: config.rs
(+19 files in other folders)
