[package]
name = "kv"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.65"
bytes = "1.2.1"
dashmap = "5.4.0"
futures = "0.3.24"
prost = "0.11.0"
tokio = { version = "1.21.1", features = ["net", "macros", "rt-multi-thread"]}
tokio-util = { version = "0.7.4", features = ["codec"]}
tracing = "0.1.36"
tracing-subscriber = { version = "0.3.15", features = ["env-filter"]}

[build-dependencies]
prost-build = "0.11.1"