[package]
name = "xdiff"
version = "0.1.0"
authors = ["Changfeng Lou<louchangfeng@outlook.com>"]
edition = "2021"

[dependencies]
anyhow = "1.0.62"
clap = { version = "3.2.17", features = ["derive"] }
console = "0.15.1"
dialoguer = "0.10.2"
http = "0.2.8"
http-serde = "1.1.0"
reqwest = { version = "0.11.11", default-features = false, features = [
  "rustls-tls",
] }
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
serde_urlencoded = "0.7.1"
serde_yaml = "0.9.10"
similar = { version = "2.2.0", features = ["inline", "bytes"] }
syntect = "5.0.0"
tokio = { version = "1.20.1", features = ["full"] }
url = { version = "2.2.2", features = ["serde"] }
