[package]
name = "pow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/bin/server.rs"

[[bin]]
name = "client"
path = "src/bin/client.rs"

[dependencies]
anyhow = "1.0.65"
blake3 = "1.3.1"
futures = "0.3.24"
hex = "0.4.3"
prost = "0.11.0"
rayon = "1.5.3"
tokio = { version = "1.21.1", features = ["sync", "macros", "rt-multi-thread"] }
tokio-stream = "0.1.10"
tonic = "0.8.1"

[build-dependencies]
tonic-build = "0.8.0"
